agent-swarm/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swarmer
  labels:
    app.kubernetes.io/name: swarmer
