agent-swarm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swarmer
spec:
  type: ClusterIP
  selector:
    app: swarmer
  ports:
    - port: 8080
      targetPort: 8080
      name: http
