agent-swarm/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: swarmer
spec:
  to:
    kind: Service
    name: swarmer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
